fix(search filters): Spacing
- Fixed left alignment of search filters

--- a/themes/hugo-docs/assets/elements/search-box.scss
+++ b/themes/hugo-docs/assets/elements/search-box.scss
@@ -32,10 +32,6 @@
     position: relative;
     padding: 1.5 * $space-s;
     overflow-x: auto;
-
-    @include media-query(tablet) {
-      justify-content: center;
-    }
   }
 
   &__main {
